fix ej 3  guia 6

--- a/6-guia/ejercicios-6/ej-3-6.tex
+++ b/6-guia/ejercicios-6/ej-3-6.tex
@@ -15,12 +15,19 @@
         $$
           z_1 = 6i \ytext z_2 = -6i
         $$
-        Si no se ve, se puede plantear la ecuación en forma exponencial, para deducir módulo y argumento.
-        O en este caso porque la potencia es 2 también se puede atacar separando para parte real y la imaginaria así:
+        Si no se ve a simple vista:
+        \begin{itemize}
+          \item Se puede plantear la \textit{ecuación en forma exponencial}, para deducir módulo y argumento.
+          \item Cuando la potencia de $z$ es 2, como en este caso, se puede atacar separando para parte real y la imaginaria e igualando.
+        \end{itemize}
+        Ahora usamos la segunda de esas técnincas:
         $$
           z^2 = (a+bi)^2 = a^2-b^2 + 2abi.
         $$
-        Para que 2 números complejos sean iguales, tienen que ser sus partes reales deben ser iguales y sus partes imaginarias también:
+        Para que 2 números complejos sean iguales, debe ocurrir que:
+        \begin{itemize}[label=\tiny\faIcon{calculator}]
+          \item Sus partes reales tiene que ser iguales y sus partes imaginarias también.
+        \end{itemize}
         $$
           z^2 = -36
         $$
