Update definiciones y todos los pdfs

--- a/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-5-1.tex
@@ -22,8 +22,8 @@
         Antes de arrancar a hacer cuentas voy a acomodar la $\relacion$ para que quede más fácil de leer \underline{para mí}.
         No es necesario hacer esto, pero como yo me distraigo hasta con la humedad del ambiente, me resulta más fácil pensarlo. Quedaría así:
         $$
-          \fcolorbox{magenta}{white}{
-            $f \relacion g \sisolosi f(1) - f(3) = g(1) - g(3).$
+          \cajaResultado{
+            f \relacion g \sisolosi f(1) - f(3) = g(1) - g(3).
           }
         $$
 
@@ -92,8 +92,8 @@
   \item
         En este ejercicio hay 3 clases. Recuerdo que hago todo el ejercicio escribiendo la relación en esta forma:
         $$
-          \fcolorbox{magenta}{white}{
-            $f \relacion g \sisolosi f(1) - f(3) = g(1) - g(3).$
+          \cajaResultado{
+            f \relacion g \sisolosi f(1) - f(3) = g(1) - g(3).
           }
         $$
 
