--- a/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
@@ -59,12 +59,12 @@ $$
     r_5(3b^2) & 0 & 3 & 2 & 2 & 3 \\ \hline
   \end{array}
   \ytext
-  \fcolorbox{orange}{white}{$
-      \begin{array}{|c|c|c|c|c|c|}
-        \hline
-        r_5(a^2 + 3b^2) & 0 & 4 & 1 & 1 & 4 \\ \hline
-      \end{array}
-    $}
+  \cajaResultado{
+    \begin{array}{|c|c|c|c|c|c|}
+      \hline
+      r_5(a^2 + 3b^2) & 0 & 4 & 1 & 1 & 4 \\ \hline
+    \end{array}
+  }
 $$
 Ese resultado dice que para que suceda que $ 5 \divideA a^2 + 3b^2$ se requiere que:
 $$
