--- a/4-guia/ejercicios-4-extra/ej-extra-17-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-17-4.tex
@@ -13,7 +13,7 @@ $$
 Por lo tanto $d$ queda:
 $$
 	d = (3a+6 : 7a^2 - a -3) =
-	\fcolorbox{orange}{white}{(3a + 6 : 27)}
+	\cajaResultado{(3a + 6 : 27)}
 $$
 Por lo tanto como $d \divideA 27$:
 $$
