--- a/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
@@ -67,7 +67,7 @@ Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 23, 29}$ en part
           \sii
           \congruencia{0}{0}{23}
         $$
-        $p = 23$ \fcolorbox{orange}{white}{cumple}.
+        $p = 23$ \cajaResultado{cumple}.
 
   \item
         \textit{Caso $p = 7$}:\par
@@ -78,7 +78,7 @@ Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 23, 29}$ en part
           \sii
           \congruencia{0}{0}{7} \blue{\Tilde}
         $$
-        $p = 7$ \fcolorbox{orange}{white}{cumple}.
+        $p = 7$ \cajaResultado{cumple}.
 
   \item
 
@@ -90,7 +90,7 @@ Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 23, 29}$ en part
           \sii
           \congruencia{0}{0}{5} \blue{\Tilde}
         $$
-        $p = 5$ \fcolorbox{orange}{white}{cumple}.
+        $p = 5$ \cajaResultado{cumple}.
 
   \item
         \textit{Caso $p = 3$}:\par
@@ -108,7 +108,7 @@ Arranco a analizar con cada uno de los  $p \en \set{2, 3, 5, 7, 23, 29}$ en part
           \sii
           \congruencia{0}{0}{2} \blue{\Tilde}
         $$
-        $p = 2$ \fcolorbox{orange}{white}{cumple}.
+        $p = 2$ \cajaResultado{cumple}.
 \end{enumerate}
 
 Hay 4 números \textit{primos} que cumplen lo pedido.
