--- a/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
@@ -31,7 +31,7 @@ Si $p = 3$ en $\llamada1$:
 $$
   \congruencia{0 + 1 + 2}{0}{3}
 $$
-\fcolorbox{orange}{white}{$p = 3$, sí sirve.} $\llamada3$
+\cajaResultado{p = 3}, sí sirve. $\llamada3$
 
 \bigskip
 
@@ -39,7 +39,7 @@ Si $p = 5$ en $\llamada1$:
 $$
   \congruencia{1 + 0 -1}{0}{5}
 $$
-\fcolorbox{orange}{white}{$p = 5$, sí sirve.} $\llamada4$
+\cajaResultado{p = 5}, sí sirve. $\llamada4$
 
 \bigskip
 
@@ -63,7 +63,8 @@ $$
   \sii
   \congruencia{2 \cdot 5 \cdot 13}{0}{p}
 $$
-Encuentro de esta forma que el \fcolorbox{orange}{white}{$p = 13$, sí sirve.} $\llamada6$
+Encuentro de esta forma que el
+\cajaResultado{p = 13}, sí sirve. $\llamada6$
 
 \bigskip
 
@@ -130,7 +131,7 @@ $$
 
 Se concluye de esta forma que los únicos $p$ primos que cumplen que $5p \divideA 6^{p-1} + 10^{p^2} + 119$ son:
 $$
-  \fcolorbox{orange}{white}{$p \en \set{3, 13}$}
+  \cajaResultado{p \en \set{3, 13}}
 $$
 
 % Contribuciones
