--- a/5-guia/ejercicios-5-extra/ej-extra-13-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-13-5.tex
@@ -94,15 +94,15 @@ $$
     \flecha{reemplazo}[en $a$]          \\
     a = 11 \cdot ( 7\cdot \yellow{q} + 5) + 7 = 77 \cdot \yellow{q} + 62
     \Sii{def}
-    \fcolorbox{orange}{white}{$\congruencia{a}{62}{77}$}
+    \cajaResultado{\congruencia{a}{62}{77}}
   \end{array}
 $$
 
 Las soluciones de los otros sistemas:
 $$
   \begin{array}{rcl}
-    a \conga7 3 & \to & \fcolorbox{orange}{white}{$\congruencia{a}{73}{77}$} \\
-    a \conga7 5 & \to & \fcolorbox{orange}{white}{$\congruencia{a}{40}{77}$}
+    a \conga7 3 & \to & \cajaResultado{\congruencia{a}{73}{77}} \\
+    a \conga7 5 & \to & \cajaResultado{\congruencia{a}{40}{77}}
   \end{array}
 $$
 
