--- a/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
@@ -118,7 +118,7 @@ Finalmente:
 $$
   n = 19 \cdot (7\magenta{q} + 5) + 10
   \sii
-  \fcolorbox{orange}{white}{$\congruencia{n}{105}{133}$}
+  \cajaResultado{\congruencia{n}{105}{133}}
 $$
 
 % Contribuciones
