--- a/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
@@ -103,7 +103,7 @@ $$
 $$
 Por lo tanto el resto que nos pedían es:
 $$
-  \fcolorbox{orange}{white}{$r_{156}(n) = 93$}
+  \cajaResultado{r_{156}(n) = 93}
 $$
 \begin{aportes}
   \item \aporte{\dirRepo}{Nad Garraz \github}
