--- a/5-guia/ejercicios-5/ej-18-5.tex
+++ b/5-guia/ejercicios-5/ej-18-5.tex
@@ -48,7 +48,7 @@ $$
   \sisolosi
   \congruencia{a^{560}}{1}{3\cdot11\cdot17}
   \sisolosi
-  \fcolorbox{orange}{white}{$\congruencia{a^{560}}{1}{561}$} \Tilde
+  \cajaResultado{\congruencia{a^{560}}{1}{561}} \Tilde
 $$
 
 \begin{aportes}
