--- a/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-5-6.tex
@@ -29,7 +29,7 @@
         $$
           (\frac{a}{4}  +  \frac{b}{3} ) \pi = \frac{3}{2} \pi + \blue{2k\pi}
           \Sii{\red{!}}
-          \fcolorbox{orange}{white}{$3a  +  4b = 18 + 24k$}
+          \cajaResultado{3a  +  4b = 18 + 24k}
         $$
         Esté resultado es literalmente la expresión de un número dividido por 24 con su resto:
         $$
