--- a/6-guia/ejercicios-6/ej-3-6.tex
+++ b/6-guia/ejercicios-6/ej-3-6.tex
@@ -50,11 +50,10 @@
         Por lo tanto se recupera que :
 
         $$
-          \fcolorbox{orange}{white}{
-            $z_1 = 0 + 6i = 6i
-              \ytext
-              z_2 = 0 - 6i = - 6i
-            $
+          \cajaResultado{
+            z_1 = 0 + 6i = 6i
+            \ytext
+            z_2 = 0 - 6i = - 6i
           }
         $$
 
@@ -81,10 +80,10 @@
 
         Los valores que nos pedían:
         $$
-          \fcolorbox{orange}{white}{
-            $z_{\scriptscriptstyle \magenta{k}=0} = e^{\frac{\pi}{4}} = \frac{1}{\sqrt{2}} + \frac{1}{\sqrt{2}}i
-              \ytext
-              z_{\scriptscriptstyle \magenta{k}=1} = e^{\frac{5}{4}\pi} = -\frac{1}{\sqrt{2}} - \frac{1}{\sqrt{2}}i$
+          \cajaResultado{
+            z_{\scriptscriptstyle \magenta{k}=0} = e^{\frac{\pi}{4}} = \frac{1}{\sqrt{2}} + \frac{1}{\sqrt{2}}i
+            \ytext
+            z_{\scriptscriptstyle \magenta{k}=1} = e^{\frac{5}{4}\pi} = -\frac{1}{\sqrt{2}} - \frac{1}{\sqrt{2}}i
           }
         $$
 
@@ -123,8 +122,8 @@
         En \red{!!}, bicuadrática.\par
         Con ese resultado los valores quedarían para el sistema:
         $$
-          \fcolorbox{orange}{white}{
-            $        z_1 = -4 -3i \ytext z_2 = 4 + 3i$
+          \cajaResultado{
+            z_1 = -4 -3i \ytext z_2 = 4 + 3i
           }
         $$
 
@@ -155,8 +154,8 @@
 
         Con ese resultado los valores quedarían para el sistema:
         $$
-          \fcolorbox{orange}{white}{
-            $        z_1 = 1 + 4i \ytext z_2 = -1 -4i$
+          \cajaResultado{
+            z_1 = 1 + 4i \ytext z_2 = -1 -4i
           }
         $$
 
