--- a/7-guia/ejercicios-7-extra/ej-extra-1-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-1-7.tex
@@ -47,7 +47,8 @@
               \Sii{$r \en \reales$}[$r > 0$]
             r = \sqrt{3} \llamada2                                           \\
               \re(f(r(-i))) : -r^6  - r^4  - 4r^2  + \c = 0
-              \Sii{$\llamada2$}[$r = \sqrt{3}$] \fcolorbox{orange}{white}{\c = 48}
+              \Sii{$\llamada2$}[$r = \sqrt{3}$]
+                  \cajaResultado{\c = 48}
             }
           \end{array}
         $$
@@ -115,14 +116,12 @@
 
         \textit{Factorizaciones: }
         \begin{center}
-          \fcolorbox{orange}{white}{
-            $
+          \cajaResultado{
               \begin{array}{rcl}
                 \racionales[X] & \to & f = (X^2 + 3) \cdot (X^2 - 2X - 4)^2                                                               \\
                 \reales[X]     & \to & f = (X^2 + 3) \cdot (X - (1 + \sqrt{5}))^2  \cdot (X - (1 - \sqrt{5}))^2                           \\
                 \complejos[X]  & \to & f =  (X-\sqrt{3}i) \cdot (X+\sqrt{3}i) \cdot  (X - (1 + \sqrt{5}))^2  \cdot (X - (1 - \sqrt{5}))^2
               \end{array}
-            $
           }
         \end{center}
 \end{enumerate}
