--- a/7-guia/ejercicios-7-extra/ej-extra-10-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-10-7.tex
@@ -38,14 +38,12 @@ $$
 $$
 Y factorizado en $\racionales[X],\, \reales[X] \ytext \complejos[X]$ queda.
 \begin{center}
-  \fcolorbox{orange}{white}{
-    $
+  \cajaResultado{
       \begin{array}{rcl}
         \racionales[X]:\quad f & = & 13\cdot(X - \frac{1}{13}) \cdot (X^2 + 1)             \\
         \reales[X]:\quad f     & = & 13\cdot(X - \frac{1}{13}) \cdot (X^2 + 1)             \\
         \complejos[X]:\quad f  & = & 13\cdot(X - \frac{1}{13}) \cdot (X - i) \cdot (X + i)
       \end{array}
-    $
   }
 \end{center}
 
