--- a/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-7-7.tex
@@ -101,7 +101,7 @@ Hay que proponer otro factor en $\racionales[X]$, que al evaluar de el número q
 
 El $f \en\racionales[X]$ que cumple lo pedido:
 $$
-  \fcolorbox{orange}{white}{$f = (X^2 - 2X - 11)(X^2 + X + 1)^2(X-3)$}
+  \cajaResultado{f = (X^2 - 2X - 11)(X^2 + X + 1)^2(X-3)}
 $$
 
 % Contribuciones
