--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -108,6 +108,7 @@
 \def\Tilde{\quad\checkmark}
 \def\ytext{\quad\text{y}\quad}
 \def\otext{\quad\text{o}\quad}
+\newcommand{\cajaResultado}[1]{\fcolorbox{orange}{white}{\ensuremath{#1}}}
 
 % Estrellita para hacer llamadas de atención, viene en divertidos colores
 % para coleccionar.
