--- a/7-guia/ejercicios-7-extra/ej-extra-11-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-11-7.tex
@@ -20,7 +20,7 @@ $$
   \Sii{$k=-2r^3$}
   r^6 -2r^6+ 25 = 0
   \sii
-  \fcolorbox{orange}{white}{$r^6 = 25$}
+  \cajaResultado{r^6 = 25}
 $$
 
 Ese último resultado es $G_6$ con módulo $\sqrt[3]{5}$:
@@ -66,10 +66,10 @@ $$
 $$
 Esto va a ser útil:
 \begin{center}
-  \fcolorbox{red}{white}{
-    $(X - z)(X- \conj{z})
-      \igual{$\llamada1$}
-      X^2 - 2\re(z)X + |z|^2$
+  \cajaResultado{
+    (X - z)(X- \conj{z})
+    \igual{$\llamada1$}
+    X^2 - 2\re(z)X + |z|^2
   }
 \end{center}
 
@@ -92,19 +92,17 @@ $$
 $$
 
 \begin{center}
-  \fcolorbox{orange}{white}{
-    $
-      \begin{array}{rcl}
-        f_{\scriptscriptstyle -10} & =               & X^6 - 10X^3 + 25                                                                            \\
-                                   & \igual{\red{!}} & (X^3 - 5)^2  \en \racionales[X]                                                             \\
-                                   & \igual{\red{!}} & \Big((X - \sqrt[3]{5}) \cdot (\blue{X^2  + \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 =
-        \Big(X - \sqrt[3]{5}\Big)^2 \cdot \Big(\blue{X^2  + \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 \en \reales[X]                          \\
-                                   & \igual{\red{!}} &
-        \Big(X - \sqrt[3]{5}\Big)^2 \cdot
-        \Big(X - \sqrt[3]{5}  \big(- \frac{1}{2} - i\frac{\sqrt{3}}{2}\big)\Big)^2 \cdot
-        \Big(X - \sqrt[3]{5}  \big(- \frac{1}{2} + i\frac{\sqrt{3}}{2}\big)\Big)^2 \en \complejos[X]
-      \end{array}
-    $
+  \cajaResultado{
+    \begin{array}{rcl}
+      f_{\scriptscriptstyle -10} & =               & X^6 - 10X^3 + 25                                                                            \\
+                                 & \igual{\red{!}} & (X^3 - 5)^2  \en \racionales[X]                                                             \\
+                                 & \igual{\red{!}} & \Big((X - \sqrt[3]{5}) \cdot (\blue{X^2  + \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 =
+      \Big(X - \sqrt[3]{5}\Big)^2 \cdot \Big(\blue{X^2  + \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2)}\Big)^2 \en \reales[X]                          \\
+                                 & \igual{\red{!}} &
+      \Big(X - \sqrt[3]{5}\Big)^2 \cdot
+      \Big(X - \sqrt[3]{5}  \big(- \frac{1}{2} - i\frac{\sqrt{3}}{2}\big)\Big)^2 \cdot
+      \Big(X - \sqrt[3]{5}  \big(- \frac{1}{2} + i\frac{\sqrt{3}}{2}\big)\Big)^2 \en \complejos[X]
+    \end{array}
   }
 \end{center}
 
@@ -125,8 +123,7 @@ $$
   \igual{$\llamada1$}
   \green{X^2  - \sqrt[3]{5} \cdot X + (\sqrt[3]{5})^2}
 $$
-\fcolorbox{orange}{white}{
-  $
+\cajaResultado{
     \begin{array}{rcl}
       f_{\scriptscriptstyle 10} & =               & X^6 + 10X^3 + 25                                                                             \\
                                 & \igual{\red{!}} & (X^3 + 5)^2  \en \racionales[X]                                                              \\
@@ -137,7 +134,6 @@ $$
       \Big(X - \sqrt[3]{5}  \big( \frac{1}{2} - i\frac{\sqrt{3}}{2}\big)\Big)^2 \cdot
       \Big(X - \sqrt[3]{5}  \big( \frac{1}{2} + i\frac{\sqrt{3}}{2}\big)\Big)^2 \en \complejos[X]
     \end{array}
-  $
 }
 
 % Contribuciones
