subo pdf actualizado guia 1

--- a/1-guia/ejercicios-1/ej-12-1.tex
+++ b/1-guia/ejercicios-1/ej-12-1.tex
@@ -159,7 +159,7 @@
           \item $\paratodo n \en \naturales,\, n \geq 5 \o n \leq 8$.\par
                 La proposición es verdadera. El conjunto descrito por $\set{ n \en \naturales \talque n \leq 8 \o n \geq 5} = \naturales$\par
                 \doceiA                        \par
-                \red{¿Se puede justificar con un gráfico?}
+                \red{¿Se puede justificar con un gráfico? \blue{$\to$ ¡Sí!}}
 
           \item $\existe n \en \naturales \talque n \geq 5 \y n\leq 8.$\par
                 La proposición es verdadera, en este caso es cuestión de encontrar solo un valor que cumpla, $n = 6$
