Agrego innecesario link en guia 6

--- a/6-guia/teoria-6/teoria-6.tex
+++ b/6-guia/teoria-6/teoria-6.tex
@@ -13,6 +13,9 @@
               \cos(\theta) & 0 & \frac{\sqrt{3}}{2} & \frac{\sqrt{2}}{2} & \frac{1}{2}        & 1             \\ \hline
             \end{array}
           $$
+                {\small
+                \href{https://www.youtube.com/watch?v=83gdQe0Ij5k}{Clickea para está \textit{simpatética} forma de recordarlo:
+                \purple{\faIcon{music}} um, dois, três, três, dois, um, todo mundo sobre 2...\purple{\faIcon{music}}}}
         \end{minipage}
         \begin{minipage}{0.5\textwidth}
           \begin{tikzpicture}[scale=4]
