--- a/4-guia/ejercicios-4/ej-27-4.tex
+++ b/4-guia/ejercicios-4/ej-27-4.tex
@@ -2,52 +2,55 @@
     Sea $n \en \naturales, n \geq 2$. Probar que si $p$ es un número primo positivo entonces $\sqrt[n]{p} \notin \racionales$.
 \end{enunciado}
 
-Supongamos que $\sqrt[n]{p} \en \racionales$ y lleguemos a una contradicción:
+Supongamos que $\sqrt[n]{p} \en \racionales$ y lleguemos a una contradicción.
 
 $$
 \sqrt[n]{p} \en \racionales 
 \entonces
 \sqrt[n]{p}=\frac{a}{b}, ~ a,b ~  \en \enteros \ytext b \neq 0
+$$
+
+Tomemos $\frac{a}{b}$ como una fracción irreducible, es decir, con $a$ y $b$ coprimos.
+
+Luego, 
+
+$$
+\sqrt[n]{p}=\frac{a}{b}
 \entonces
 b\cdot\sqrt[n]{p}=a
 \entonces
-b^{n}\cdot p=a^{n}
-$$
-
-Por otro lado, por TFA, tenemos que
-
-$$
-\llave{l}{
- a = (P_1)^{m_1}...(P_r)^{m_r}, ~ m_1,...,m_r ~ \en \naturales_0 \\
- b = (P_1)^{l_1}...(P_r)^{l_r}, ~ l_1,...,l_r ~ \en \naturales_0
-}
+b^{n} \cdot p=a^{n}
 \entonces
-\llave{l}{
- a^{n} = (P_1)^{n\cdot m_1}...(P_r)^{n\cdot m_r} \\
- b^{n} = (P_1)^{n\cdot l_1}...(P_r)^{n\cdot l_r}
-}
+p \divideA a^{n}
+\Entonces{$p$ primo}
+p \divideA a
 $$
 
-Luego
+Como $p \divideA a$, entonces $a= p \cdot k, \ k \en \enteros$. Reemplazando, tenemos que
 
 $$
-b^{n}\cdot p = a^{n}
-\sisolosi
-(P_1)^{n\cdot l_1}...(P_r)^{n\cdot l_r}\cdot p^1=(P_1)^{n\cdot m_1}...(P_r)^{n\cdot m_r}
+b^{n} \cdot p=a^{n}
+\entonces
+b^{n} \cdot p=(p \cdot k)^{n}
+\entonces 
+b^{n} \cdot p=p^n \cdot k^{n}
+\Entonces{\red{!!}}
+b^{n}=p^{n-1} \cdot k^{n}
+\Entonces{\red{!!!}}
+b^{n}=p \cdot p^{n-2} \cdot k^{n}
+\entonces
+p \divideA b^{n}
+\Entonces{$p$ primo}
+p \divideA b
 $$
 
-En el lado izquierdo de la igualdad, el primo $p$ aparece con el exponente $n\cdot l_p +1$, mientras que en el lado izquierdo aparece con el exponente $n\cdot m_p$ 
+El paso en $\red{!!}$ tiene sentido porque $n \en \naturales$ y en $\red{!!!}$ porque $n \geq 2$. Esto asegura que las
+expresiones $p^{n-1}$ y $p^{n-2}$ pertenezcan $\naturales_0$. \bigskip
 
-Entonces, por la unicidad de la factorización, tenemos que
+Así, obtuvimos que $p \divideA a$ y $p \divideA b$, lo cual contradice el hecho que $a$ y $b$ son coprimos.
+La contradicción proviene de la única suposición que hicimos, que $\sqrt[n]{p} \en \racionales$. 
+Luego, $\sqrt[n]{p} \notin \racionales$, tal como queriamos probar.
 
-\begin{align*}
-    n\cdot l_p +1 &= n\cdot m_p \\
-    1 &= n\cdot m_p - n\cdot l_p \\
-    \frac{1}{n} &=m_p-l_p
-\end{align*}
-
-Lo cual es absurdo, pues $m_p-l_p \en \enteros$ pero claramente $\frac{1}{n} \notin \enteros ~ $para$ ~ n \geq 2$.
-La contradicción proviene de la única suposición que hicimos, que $\sqrt[n]{p} \en \racionales$. Luego, $\sqrt[n]{p} \notin \racionales$, tal como queriamos probar.
 
 \begin{aportes}
     \item \aporte{https://github.com/Nunezca}{Nunezca \github}
